Make async SSE-based `GET /temperature/sse/rx` via RxJava.

--- a/src/main/resources/static/temperature/sse/app-events.html
+++ b/src/main/resources/static/temperature/sse/app-events.html
@@ -13,7 +13,7 @@
             document.getElementById("events").appendChild(event);
         }
 
-        let eventSource = new EventSource("/temperature-sse");
+        let eventSource = new EventSource("/temperature/sse/app-events");
         eventSource.onmessage = e => {
             const t = JSON.parse(e.data);
             const fixed = Number(t.value).toFixed(2);
